overflow fixed

--- a/module3/excel/css/style.css
+++ b/module3/excel/css/style.css
@@ -1,77 +1,80 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-.menu-options{
-border: 0.5px solid;
-height: 30px;
+.menu-options {
+    border: 0.5px solid;
+    height: 30px;
 }
 
-.address-content{
-border: 0.5px solid;
-height: 30px;
+.address-content {
+    border: 0.5px solid;
+    height: 30px;
 }
 
-.cells-content{
-height: 85vh;
-background-color: yellowgreen;
-overflow: auto;
+.cells-content {
+    height: 85vh;
+    background-color: yellowgreen;
+    overflow: auto;
+    position: relative;
 }
 
-.sheets{
-border: 0.5px solid;
-height: 30px;
+.sheets {
+    border: 0.5px solid;
+    height: 30px;
 }
 
-.row{
-display: flex;
+.row {
+    display: flex;
 }
 
-.cell{
-border: 0.2px solid;
-height: 30px;
-width: 100px;
+.cell {
+    border: 0.2px solid;
+    height: 30px;
+    width: 100px;
 }
 
-.top-left-cell{
-border-right: 0.1px solid;
-border-bottom: 0.1px solid;
-background-color: gray;
-position: absolute;
-width: 30px;
-height: 30px;
-
-}
-
-.top-row{
-display: flex;
-position: absolute;
-left: 30px;
-}
-
-.top-row-cell{
-background-color: gray;
-width: 100px;
-height: 30px;
-border-left: 0.1px solid;
-border-bottom: 0.1px solid;
-display: flex;
-justify-content: center;
-align-items: center;
-
-}
-
-.left-col{
+.top-left-cell {
+    border-right: 0.1px solid;
+    border-bottom: 0.1px solid;
     background-color: gray;
-position: absolute;
-left: 0;
-top: 90px;
+    position: fixed;
+    width: 30px;
+    height: 30px;
+    z-index: 2;
+
 }
 
-.left-col-cell{
-    
+.top-row {
+    background-color: gray;
+    display: flex;
+    position: fixed;
+    left: 30px;
+    z-index: 1;
+}
+
+.top-row-cell {
+    width: 100px;
+    height: 30px;
+    border-left: 0.1px solid;
+    border-bottom: 0.1px solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.left-col {
+    background-color: gray;
+    position: absolute;
+    left: 0;
+    top: 30px;
+    z-index: 1;
+}
+
+.left-col-cell {
     width: 30px;
     height: 30px;
     border-bottom: 0.1px solid;
@@ -80,8 +83,10 @@ top: 90px;
     align-items: center;
 }
 
-.cell{
-position: absolute;
-left: 30px;
-top: 90px;
+.cells {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    z-index: 0;
+    
 }
